test/error/StReturnNoValue.fu
public static class Test
{
	public static bool Run()
	{
		return; //ERROR: Missing return value
	}
}
